--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "gambatte"]
 	path = gambatte
-url=https://github.com/gabrieloc/gambatte.git
+url=https://github.com/gabrieloc/gambatte_watchOS.git
